Manually added several hundred historical and potential Ottoman ship names

--- a/localisation/KR_Equipment_l_english.yml
+++ b/localisation/KR_Equipment_l_english.yml
@@ -1595,6 +1595,12 @@ OTT_infantry_equipment_2_short:0 "T-60"
 OTT_infantry_equipment_2_desc:0 "Kırıkkale T-60 Semi Automatic Rifle was based on the receiver of the Gewehr 41, the T-60 is issued with a lighter build and shortened stock, emphasising reliability and speed over range and accuracy. This rifle saw wide use across all branches of service in the Ottoman Military."
 OTT_infantry_equipment_3:0 "Yıldıray 64"
 OTT_infantry_equipment_3_short:0 "YDR-64"
+OTT_infantry_at:0 "K30 Boru"
+OTT_infantry_at2:0 "K39 Kanun"
+OTT_support_weapons:0 "Maksim MG08 & Piyade Havanı"
+OTT_support_weapons2:0 "Kırıkkale M1358 & 60mm FH Havan"
+OTT_support_weapons3:0 "Kırıkkale M1361 & 100mm FH Havan"
+OTT_support_weapons4:0 "Kırıkkale M1364 & 120mm FH Havan"
 
 #Motorised
 
@@ -1609,8 +1615,6 @@ OTT_mechanized_equipment_2_desc:0 "The MPA 361 half-track was an armoured fighti
 OTT_mechanized_equipment_3:0 "Muhassas Paletli Araba 361/24"
 OTT_mechanized_equipment_3_short:0 "MPA 361/24"
 OTT_mechanized_equipment_3_desc:0 "An updated version of the MPA 361 fitted with a F360-K2 'Baykuş' infrared spotlight."
-OTT_motorized_rocket_equipment_0:0 "U-29 Saz"
-OTT_motorized_rocket_equipment_0_short:0 "Saz"
 OTT_motorized_rocket_equipment_1:0 "U-34 Dombra"
 OTT_motorized_rocket_equipment_1_short:0 "Dombra"
 
@@ -1680,7 +1684,7 @@ OTT_medium_tank_equipment_1_short:0 "Uygur"
 OTT_medium_tank_equipment_1_desc:0 "First proposed in the Harb-i Yıldırım military reforms, the I. Zırhlı Muharebe Vasıtası (First Armored Battle Vehicle) 'Uygur' is a bulkier version of MT-55. It had a thicker hull and also had improved cannon and armour design. I. ZMV had many variants thanks to the fact that its chassis was easily upgradeable, as demanded by Commissioner Ömer Fahrettin Pasha who wanted its design and parts to be simple and easily interchangeable."
 OTT_medium_tank_equipment_2:0 "II. Zırhlı Muharebe Vasıtası 'Kuman'"
 OTT_medium_tank_equipment_2_short:0 "Kuman"
-OTT_medium_tank_equipment_2_desc:0 "The II. ZMV 'Kuman' medium tank is an updated version of I. ZMV. It was intended to withstand the harshest conditions while retaining a decent combat efficiency. It had 7.7 cm ÇVT main armament and M35 coaxial MGs. Experimental sloped armour and armoured skirts were also introduced in an attempt to counter incoming enemy AT rounds."
+OTT_medium_tank_equipment_2_desc:0 "The II. ZMV 'Kuman' medium tank is an updated version of I. ZMV. It was intended to withstand the harshest conditions while retaining a decent combat efficiency. It had 7.7 cm ÇVT main armament and M1358 coaxial MGs. Experimental sloped armour and armoured skirts were also introduced in an attempt to counter incoming enemy AT rounds."
 OTT_medium_tank_equipment_3:0 "III. Zırhlı Muharebe Vasıtası 'Altay'"
 OTT_medium_tank_equipment_3_short:0 "Altay"
 OTT_medium_tank_equipment_3_desc:0 "Altay is the common name of a medium tank deployed by Ottoman Empire during Second Weltkrieg and late stages of Second Arab Revolt. It was intended for standardising tank production, and as a replacement for the I. ZMV and II. ZMV. While never replacing the latter due to complex design, it served alongside it and the heavier Arslan tanks until the end of the war. The Germans dubbed the Altay Tank 'Clausewitz Pasha' because its design was heavily influenced by the German Panzerkampfwagen V von Clausewitz."
