--- a/localisation/core_l_english.yml
+++ b/localisation/core_l_english.yml
@@ -416,6 +416,7 @@ FLEET_NAME:0 "$COUNTRY$ Fleet $NUMBER$"
 FLEET_NAME_USA:0 "USS Navy Group $NUMBER$"
 FLEET_NAME_GER:0 "$COUNTRY$ Flotta $NUMBER$"
 FLEET_NAME_SOV:0 "$NUMBER$-ja Sovetskaja Flotilija"
+FLEET_NAME_OTT:0 "$NUMBER$. Donanma Firkasi"
 CHANGE_NAVAL_MODE:0 "Toggle Control Mode"
 CHANGE_NAVAL_MODE_DESC:0 "Toggle mode between direct movement control and giving missions in areas"
 CREATE_NEW_FLEET:0 "Create New Fleet"
