A few more fixes

--- a/localisation/KR_Equip_naval_l_english.yml
+++ b/localisation/KR_Equip_naval_l_english.yml
@@ -176,6 +176,8 @@ RUS_submarine_4_desc:0 "The Series XXV submarines, are the development of the pr
 
 ### Ottoman Empire ###
 
+FLEET_NAME_OTT:0 "$NUMBER$. Donanma Firkasi"
+
 OTT_battle_cruiser_pre:1 "Yavuz Class"
 OTT_battle_cruiser_pre_desc:1 "The Yavuz-class is a licenced copy of the German Moltke-class battlecruisers. During the Weltkrieg, the Moltke-class SMS Goeben was transferred to the Ottoman Navy and renamed the Yavuz Sultan Selim, effectively founding the class. After the war, the Ottomans purchased a licence to produce additional Yavuz-class battlecruisers.
 
