--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -298,7 +298,7 @@ POL_prussian_partition_desc:0 "The German Empire is showing weakness and is dist
 POL_ukranian_alliance:0 "A Ukrainian Alliance"
 POL_ukranian_alliance_desc:0 "Our neighbor Ukraine has joined us in becoming a Syndicalist power, and it is only natural that we approach them with an offer of alliance."
 POL_central_arms:0 "Państwowe Wytwórnie Uzbrojenia"
-POL_central_arms_desc:0 "The Państwowe Wytwórnie Uzbrojenia is an industrial conglomerate that controls a large portion of Polish arms manufacturing. Increasing their authority and giving them leiencies in the law will allow them to further strengthen Polish arms manufacturing." #WTF is "leiencies"???
+POL_central_arms_desc:0 "The Państwowe Wytwórnie Uzbrojenia is an industrial conglomerate that controls a large portion of Polish arms manufacturing. Increasing their authority and giving them leniency in the law will allow them to further strengthen Polish arms manufacturing."
 POL_combined_arms:0 "Combined Arms"
 POL_combined_arms_desc:0 "Wars are not fought with just an army, but rather with a combination of infantry, armour, and an air force. We must make use of this combined arms theory by teaching our officers proper military techniques."
 POL_infantry_tactics:0 "Integrated Infantry Tactics"
@@ -308,7 +308,7 @@ POL_tp_program_desc:0 "The 'TP-Program' is a Polish initiative to re-purpose old
 POL_expand_airbase:0 "Expand our Air Defences"
 POL_expand_airbase_desc:0 "Even if Poland cannot afford to create a strong airforce of her own, we can still afford to shoot down other nation's air forces. Improving our national anti-air defences will certainly come in handy in the event of hostilities."
 POL_brest_livotsk:0 "Return of Brest-Litovsk"
-POL_brest_livotsk_desc:0 "With our close ties to GErmany, we have a unique opportunity to diplomatically press our claims to the region around Brest-Livotsk. This region is rightfully ours, and the world must know this."
+POL_brest_livotsk_desc:0 "With our close ties to Germany, we have a unique opportunity to diplomatically press our claims to the region around Brest-Livotsk. This region is rightfully ours, and the world must know this."
 POL_sieze_galicia:0 "Seize Galicia"
 POL_sieze_galicia_desc:0 "Galicia is a rightful part of Poland, and we must press our claims to the region! Galicia will be returned to rightful Polish control!"
 POL_radek_policy:0 "Economic Solidarity"
@@ -326,7 +326,7 @@ POL_experiment_with_radar_desc:0 "RADAR is a new technology in the field of warf
 POL_empower_gminy:0 "Empower the Województwa"
 POL_empower_gminy_desc:0 "We must hand back the power to the people, and allow themselves to be in charge of their own defences. We shall allow every Województwa to maintain and control their own small local militia forces, so that they may better defend their own lands and interests."
 POL_fourth_international:0 "Joining The Fourth International"
-POL_fourth_international_desc:0 "A powerful Syndicalist state, the Soviet Untion has denounced the ways of the French Commune and the Third Internationale. They instead have created a "Fourth International" and are calling all true Syndicalist states to join in their cause. We should take them up on their offer."
+POL_fourth_international_desc:0 "A powerful Syndicalist state, the Soviet Union has denounced the ways of the French Commune and the Third Internationale. They instead have created a "Fourth International" and are calling all true Syndicalist states to join in their cause. We should take them up on their offer."
 
 ### Opinion Modifiers ###
 POL_NATIONALISTS_GOV:0 "Nationalist government in Poland"
@@ -1146,16 +1146,16 @@ poland.196.d:0 "With the unruly monarchist factions now destroyed for the time b
 poland.196.a:0 "The Kingdom is merely a fiction."
 poland.196.b:0 "We cannot violate the sanctity of the Kingdom."
 poland.197.t:0 "The Monarchist Faction"
-poland.197.d:0 "Troubled by the increasing control the Marshal is having over state affairs in Poland, a large group of Szlatcha and State Officials who continue to support the monarchy have come forward with an offer. If we guarantee their roles in [POL.GetLeader]'s government and take an oath that the monarchy will be restoed in due time, they will give their full support to the current government of Poland. It is a promising offer, but how much can we really trust these men?"
+poland.197.d:0 "Troubled by the increasing control the Marshal is having over state affairs in Poland, a large group of Szlatcha and State Officials who continue to support the monarchy have come forward with an offer. If we guarantee their roles in [POL.GetLeader]'s government and take an oath that the monarchy will be restored in due time, they will give their full support to the current government of Poland. It is a promising offer, but how much can we really trust these men?"
 poland.197.a:0 "We will make the deal."
 poland.197.b:0 "They have no real power, begone!"
 poland.198.t:0 "Poland Falls to Syndicalists"
-poland.198.d:0 "After the complete collapse of the Polish government following the Black Monday disaster, Poland found itself in complete anarchy, with many different political factions vying for power in the vacuum of the old Kingdom. This fighting has come to a close today as Syndicalist forces claim victory, announcing thier complete control of the country from the chambers of the defunct Regency Council. The International community has reacted with shock, as the formerly conservative governemnt of the Kingdom has been replaced with a radical Syndiclalist government seemingly overnight. Time will tell how this bodes for Europe."
+poland.198.d:0 "After the complete collapse of the Polish government following the Black Monday disaster, Poland found itself in complete anarchy, with many different political factions vying for power in the vacuum of the old Kingdom. This fighting has come to a close today as Syndicalist forces claim victory, announcing their complete control of the country from the chambers of the defunct Regency Council. The International community has reacted with shock, as the formerly conservative government of the Kingdom has been replaced with a radical Syndicalist government seemingly overnight. Time will tell how this bodes for Europe."
 poland.198.a:0 "Welcome our new brothers!"
 poland.198.b:0 "Another nation falls to the plague."
 poland.198.c:0 "Glory to us!"
 poland.199.t:0 "Poland Falls to Nationalists"
-poland.199.d:0 "After the complete collapse of the Polish government following the Black Monday disaster, Poland found itself in complete anarchy, with many different political factions vying for power in the vacuum of the old Kingdom. This fighting has come to a close today as Polish Nationalist forces claim victory, formally announcing the creation of the new regime from the abandoned steps of the palace at Warsaw. The new nationalist government has rattled their neighbors with immediate proclamations of a 'Greater Polish State' and intentions to unify all Polish people under one flag. Whether or not the new government can make good on their promises remains to be seen."
+poland.199.d:0 "After the complete collapse of the Polish government following the Black Monday disaster, Poland found itself in complete anarchy, with many different political factions vying for power in the vacuum of the old Kingdom. This fighting has come to a close today as Polish Nationalist forces claim victory, formally announcing the creation of the new regime from the abandoned steps of the palace at Warsaw. The new nationalist government has rattled their neighbours with immediate proclamations of a 'Greater Polish State' and intentions to unify all Polish people under one flag. Whether or not the new government can make good on their promises remains to be seen."
 poland.199.a:0 "A worrisome development."
 poland.199.b:0 "To our new future!"
 poland.200.t:0 "Poland Declares the Republic"
@@ -1163,7 +1163,7 @@ poland.200.d:0 "After several high-profile terror attacks in Poland and the new-
 poland.200.a:0 "Interesting."
 poland.200.b:0 "Long live the Republic!"
 poland.201.t:0 "The Polish Military Seizes Control"
-poland.201.d:0 "In order to prevent a total collapse of the government in Poland, yesterday the Sejm passed an emergency measure to invite the Polish Military to create a new government until the economic and political situations stabilize. The Polish military moved swiftly under the guidance of [POL.GetLeader], who has declared national curfews in the wake of this sudden military takeover. Polish military units now patrol the streets of Warsaw, and many wonder if even after the situation stabilizes, the military intends to stay."
+poland.201.d:0 "In order to prevent a total collapse of the government in Poland, yesterday the Sejm passed an emergency measure to invite the Polish Military to create a new government until the economic and political situations stabilise. The Polish military moved swiftly under the guidance of [POL.GetLeader], who has declared national curfews in the wake of this sudden military takeover. Polish military units now patrol the streets of Warsaw, and many wonder if even after the situation stabilises, the military intends to stay."
 poland.201.a:0 "Interesting."
 poland.201.b:0 "It is for the best."
 poland.202.t:0 "Poland Joins the Fourth International?"
@@ -1177,15 +1177,15 @@ poland.204.t:0 "The Soviet Union Dismisses Polish Interest"
 poland.204.d:0 "Seemingly distrusting the new Syndicalist regime in Poland, the Soviet Union has denied our entry into the Fourth International, stating that our belief in their ideals is too weak. Without the help of the Fourth International, our future in Europe looks bleak."
 poland.204.a:0 "Impossible!"
 poland.205.t:0 "Monarchist Coup"
-poland.205.d:0 "Late last evening, gunfire erupted from many different government offices around Warsaw. In the chaos, a statement was broadcast from within the center of the city, declaring the restoration of the Kingdom of Poland, and the downfall of the current regime. There has been a deafening silence in opposition to this message, indicating a complete victory for the monarchist faction. [POL.GetLeader] has not been seen nor heard from since the coup began, and the monarchists have already placed Augustyn Czartoryski on the throne, cementing their victory over the opposition."
+poland.205.d:0 "Late last evening, gunfire erupted from many different government offices around Warsaw. In the chaos, a statement was broadcast from within the centre of the city, declaring the restoration of the Kingdom of Poland, and the downfall of the current regime. There has been a deafening silence in opposition to this message, indicating a complete victory for the monarchist faction. [POL.GetLeader] has not been seen nor heard from since the coup began, and the monarchists have already placed Augustyn Czartoryski on the throne, cementing their victory over the opposition."
 poland.205.a:0 "We should have known..."
 poland.206.t:0 "Augustyn I Czartoryski Passes"
-poland.206.good:0 "Surrounded by family and friends, the much-beloved King [POL.GetLeader] succumbed to a severe disease that had been plaguing him for the past year. News of the king's passsing has devastated the nation, and the Polish people mourn across the country. Luckily for the nation, the king's young and only son, Ludwik, is set to ascend to the throne. His ascent at the young age of 4 will mean hard times for the political leadership for the ocuntry, but many are hopeful he will grow into the role of a proper king."
-poland.206.bad:0 "Surrounded by family and friends, the much-beloved King [POL.GetLeader] succumbed to a severe disease that had been plaguing him for the past year. News of the king's passsing has devastated the nation, and the Polish people mourn across the country. However, a problem now faces the nation. The king's only son, Ludwik, is too young to ascend to the throne and will be for some time. This requires that a new Regency Council will take control of the nation for the next decade while the young Ludwik matures. The Polish nation is kingless once more."
+poland.206.good:0 "Surrounded by family and friends, the much-beloved King [POL.GetLeader] succumbed to a severe disease that had been plaguing him for the past year. News of the king's passing has devastated the nation, and the Polish people mourn across the country. Luckily for the nation, the king's young and only son, Ludwik, is set to ascend to the throne. His ascent at the young age of 4 will mean hard times for the political leadership for the country, but many are hopeful he will grow into the role of a proper king."
+poland.206.bad:0 "Surrounded by family and friends, the much-beloved King [POL.GetLeader] succumbed to a severe disease that had been plaguing him for the past year. News of the king's passing has devastated the nation, and the Polish people mourn across the country. However, a problem now faces the nation. The king's only son, Ludwik, is too young to ascend to the throne and will be for some time. This requires that a new Regency Council will take control of the nation for the next decade while the young Ludwik matures. The Polish nation is king-less once more."
 poland.206.a:0 "Not again!"
 poland.206.b:0 "All hail!"
 poland.207.t:0 "Intervening in Galicia"
-poland.207.d:0 "With the recent crisis and civil war in the Austrian Empire, the small Galician state has presented itself as a ripe target. Austria is in no position to defend them, we have a decent claim to the region, and they have a large Polish population which would *undoubtedly* welcome our liberating soliders with open arms. This seems to be the perfect opportunity for the new regime to flex its muscles..."
+poland.207.d:0 "With the recent crisis and civil war in the Austrian Empire, the small Galician state has presented itself as a ripe target. Austria is in no position to defend them, we have a decent claim to the region, and they have a large Polish population which would *undoubtedly* welcome our liberating soldiers with open arms. This seems to be the perfect opportunity for the new regime to flex its muscles..."
 poland.207.a:0 "We are not prepared."
 poland.207.b:0 "Attack!"
 
