A few more spelling and readability fixes

--- a/localisation/KR_Commune_of_France_l_english.yml
+++ b/localisation/KR_Commune_of_France_l_english.yml
@@ -303,7 +303,7 @@ FRA_help_cnt_desc:0 "Our comrades of the CNT are fighting against the Carlist an
 FRA_support_cnt:0 "Agreed to support the CNT"
 FRA_second_inter_congress:0 "The Second Internationale Congress"
 FRA_second_inter_congress_desc:0 "With the Second American Civil War raging on, as well as a number of other conflicts ready to break out at any time across the world, the Internationale has to redefine its approach towards the global revolution. Since the first Congress of the Internationale took place in France, the second one will take place in Britain."
-FRA_wip:0 "Those focuses are not done yet, sorry :("
+FRA_wip:0 "Those foci are not done yet, sorry :("
 FRA_help_south_america:0 "Help our South American Brothers"
 FRA_help_south_america_desc:0 "During the Second Congress we promised to help our South American comrades to develop their country and defeat La Plata. We'll send them tons of equipment and material, nothing is too good for comrades!"
 FRA_help_bolivia:0 "Agreed to help Bolivia"
