--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -219,34 +219,34 @@ ANG_national_populist_DEF:0 "Angola"
 
 AOG_totalist:0 "Ostasiatische Kommune"
 AOG_totalist_ADJ:0 "Ostasiat"
-AOG_totalist_DEF:0 "Ostasiatische Kommune"
+AOG_totalist_DEF:0 "The Ostasiatische Kommune"
 AOG_syndicalist:0 "Ostasiatische Kommune"
 AOG_syndicalist_ADJ:0 "Ostasiat"
-AOG_syndicalist_DEF:0 "Ostasiatische Kommune"
+AOG_syndicalist_DEF:0 "The Ostasiatische Kommune"
 AOG_radical_socialist:0 "Ostasiatische Kommune"
 AOG_radical_socialist_ADJ:0 "Ostasiat"
-AOG_radical_socialist_DEF:0 "Ostasiatische Kommune"
+AOG_radical_socialist_DEF:0 "The Ostasiatische Kommune"
 AOG_social_democrat:0 "Ostasiatische Gesellschaft"
 AOG_social_democrat_ADJ:0 "Deutsch-Ostasiat"
-AOG_social_democrat_DEF:0 "Ostasiatische Gesellschaft"
+AOG_social_democrat_DEF:0 "The Ostasiatische Gesellschaft"
 AOG_social_liberal:0 "Deutsche Ostasiengesellschaft"
 AOG_social_liberal_ADJ:0 "Deutsch-Ostasiat"
-AOG_social_liberal_DEF:0 "Deutsche Ostasiengesellschaft"
+AOG_social_liberal_DEF:0 "The Deutsche Ostasiengesellschaft"
 AOG_market_liberal:0 "Deutsche Ostasiengesellschaft"
 AOG_market_liberal_ADJ:0 "Deutsch-Ostasiat"
-AOG_market_liberal_DEF:0 "Deutsche Ostasiengesellschaft"
+AOG_market_liberal_DEF:0 "The Deutsche Ostasiengesellschaft"
 AOG_social_conservative:0 "Ostasiatische Gesellschaft"
 AOG_social_conservative_ADJ:0 "Deutsch-Ostasiat"
-AOG_social_conservative_DEF:0 "Ostasiatische Gesellschaft"
+AOG_social_conservative_DEF:0 "The Ostasiatische Gesellschaft"
 AOG_authoritarian_democrat:0 "Allg. Ostasien-GmbH"
 AOG_authoritarian_democrat_ADJ:0 "Deutsch-Ostasiat"
-AOG_authoritarian_democrat_DEF:0 "Allgemeine Ostasiengesellschaft"
+AOG_authoritarian_democrat_DEF:0 "The Allgemeine Ostasiengesellschaft"
 AOG_paternal_autocrat:0 "Allg. Ostasien-GmbH"
 AOG_paternal_autocrat_ADJ:0 "Deutsch-Ostasiat"
-AOG_paternal_autocrat_DEF:0 "Allgemeine Ostasiengesellschaft"
-AOG_national_populist:0 "Deutsch Ostasien"
-AOG_national_populist_ADJ:0 "Deutsch Ostasiatisch"
-AOG_national_populist_DEF:0 "Deutsch-Ostasiat"
+AOG_paternal_autocrat_DEF:0 "The Allgemeine Ostasiengesellschaft"
+AOG_national_populist:0 "Deutsch-Ostasien"
+AOG_national_populist_ADJ:0 "Deutsch-Ostasiat"
+AOG_national_populist_DEF:0 "Deutsch-Ostasien"
 
 ARG_totalist:0 "Revolutionary La Plata"
 ARG_totalist_ADJ:0 "Platine"
@@ -372,7 +372,7 @@ AUS_national_populist:0 "Austrian Empire"
 AUS_national_populist_ADJ:0 "Austrian"
 AUS_national_populist_DEF:0 "The Austrian Empire"
 
-AZB_totalist:0 "syndicalist Republic of Azerbaijan"
+AZB_totalist:0 "Socialist Republic of Azerbaijan"
 AZB_totalist_ADJ:0 "Azerbaijanian"
 AZB_totalist_DEF:0 "The Socialist Republic of Azerbaijan"
 AZB_syndicalist:0 "Socialist Republic of Azerbaijan"
