Allg. Ostasien-Gesellschaft now

--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -238,10 +238,10 @@ AOG_market_liberal_DEF:0 "The Deutsche Ostasiengesellschaft"
 AOG_social_conservative:0 "Ostasiatische Gesellschaft"
 AOG_social_conservative_ADJ:0 "Deutsch-Ostasiat"
 AOG_social_conservative_DEF:0 "The Ostasiatische Gesellschaft"
-AOG_authoritarian_democrat:0 "Allg. Ostasien-GmbH"
+AOG_authoritarian_democrat:0 "Allg. Ostasien-Gesellschaft"
 AOG_authoritarian_democrat_ADJ:0 "Deutsch-Ostasiat"
 AOG_authoritarian_democrat_DEF:0 "The Allgemeine Ostasiengesellschaft"
-AOG_paternal_autocrat:0 "Allg. Ostasien-GmbH"
+AOG_paternal_autocrat:0 "Allg. Ostasien-Gesellschaft"
 AOG_paternal_autocrat_ADJ:0 "Deutsch-Ostasiat"
 AOG_paternal_autocrat_DEF:0 "The Allgemeine Ostasiengesellschaft"
 AOG_national_populist:0 "Deutsch-Ostasien"
