--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -384,7 +384,7 @@ ott.30.a:0 "Ignore the problem and hope it goes away."
 ott.30.b:0 "Grant more autonomy to local governments."
 ott.30.c:0 "Crackdown on the dissidents!"
 
-ott.31.t:0 "Arab nationalists threatens revolt"
+ott.31.t:0 "Arab nationalists threaten revolt"
 ott.31.d:0 "The 25th anniversary of our entry into the Weltkrieg is approaching on October 28th and Arab nationalists are using the event as an excuse to protest the government. This time angry crowds risk the outbreak of violence and open rebellion. How shall we respond?"
 ott.31.a:0 "C'mon guys, I thought we are all Muslims in here?"
 ott.31.b:0 "Send in the Gendarmerie and local inzibat units."
@@ -438,14 +438,14 @@ ott.41.a:0 "These Greeks will never learn from the past!"
 
 ott.42.t:0 "Destroying the Cypriot fortifications"
 ott.42.d:0 "The Cypriot uprising was crushed by our invincible army, but in some parts of their territory, the forts remained. These are useless for us but future rebels could use them - against us. What shall we do?"
-ott.42.a:0 "Destroy them! And carve the Ottoman flag on the mountain while you are at it..."
+ott.42.a:0 "Destroy them! And carve the Ottoman flag into the mountain while you are at it..."
 
 ott.43.t:0 "Greek Cypriots succesfully resist!"
 ott.43.d:0 "Our armed forces could not break apart the rebellious state of Cyprus. Some members of the general staff suggest that continuing with this fruitless effort greatly weakens our forces facing the hostile Arabian states of Hashemite Arabia and Egypt. Shall we recognise the independence of Cyprus?"
 ott.43.a:0 "Accept their independence..."
 ott.43.b:0 "Never!"
 
-ott.44.t:0 "Aid our brothers in Cyprus?"
+ott.44.t:0 "Send aid to our brothers in Cyprus?"
 ott.44.d:0 "The Greek inhabitants of Cyprus people have risen against their Ottoman overlords, wanting to finally break free from them. This presents us with the option to significantly weaken the Ottoman Empire via supporting the Cypriot independence movement..."
 ott.44.a:0 "Send aid to Cyprus!"
 ott.44.b:0 "We cannot do anything..."
