--- a/localisation/KR_Italy_l_english.yml
+++ b/localisation/KR_Italy_l_english.yml
@@ -159,7 +159,7 @@ ITA_Elia_dalla_Costa_desc:0 "Elia dalla Costa is a man most favoured by the peop
 ITA_Soup_Kitchens:0 "Feed the Poor"
 ITA_Soup_Kitchens_desc:0 "The poor of our country need to be fed, just as our Lord commands us to do. The new system of charity will make use of popular donations, allowing the government to invest invest its resources elsewhere."
 ITA_Rise_Masses:0 "Rise of the Masses"
-ITA_Rise_Masses_desc:0 "The thing about the poor is that they exist in multitudes. Fed, clothed, and provided the fire of inspiration which only God can provide, they can be marshalled to support the will of the Pope with a fervor unmatched by any mercenary."
+ITA_Rise_Masses_desc:0 "The thing about the poor is that they exist in multitudes. Fed, clothed, and provided the fire of inspiration which only God can provide, they can be marshalled to support the will of the Pope with a fervour unmatched by any mercenary."
 ITA_Approach_Nobility:0 "Approach the Aristocracy"
 ITA_Approach_Nobility_desc:0 "The Italian aristocracy still holds a great deal of power in the nation, and they are all too nervous of losing it entirely with the wave of democracy and syndicalism which has swept the continent. They must be reassured they have a place in the order to come."
 ITA_Crush_Aristocracy:0 "Crush the Aristocracy"
