Fengtian now has its rightful claims on all of China.
Also some minor localization stuff.

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -183,7 +183,7 @@ FNG_A_Resplendent_Republic:0 "A Reseplendent Republic"
 FNG_A_Resplendent_Republic:0 "With the successful creation of a constitution satisfying at least the remaining major players in the government, it now merely needs to be adopted by the Assembly. Surely the way forward is now bright and clear for the Fengtian Government and the Republic of China. Long live democracy long live the Republic!"
 #The Begonia Leaf
 FNG_From_Beijing_to_the_Begonia_Leaf:0 "From Beijing to the Begonia Leaf"
-FNG_From_Beijing_to_the_Begonia_Leaf_desc:0 "INSERT"
+FNG_From_Beijing_to_the_Begonia_Leaf_desc:0 "For decades, students and nationalists have compared the shape of China, that is to say China undivided, to the shape of a Begonia leaf. With Beijing in our hands, it has come time to reclaim all of our homeland, and make the Begonia Leaf a reality!"
 #Strengthen the Army Branch
 FNG_Strengthen_the_Army:0 "Strengthen the Army"
 FNG_Strengthen_the_Army_desc:0 "During the Civil Wars, the Fengtian Army was utterly decimated as a consequence of intense fighting against more modern German equipment and defections by important generals, and the ensuing eight years have seen slow but steady rearmament and reorganisation in-pace with the recovering economy."
@@ -273,8 +273,8 @@ FNG_The_Nanjing_Plan:0 "The Nanjing Plan"
 FNG_The_Nanjing_Plan_desc:0 "The only other angle of attack lies across the Bohai Gulf, and again with German concessions limiting our options, the most realistic target for landing is the Yangtze River Delta near Nanjing. Such an invasion will rely on marines, and Japanese naval support."
 FNG_Wu_Wang_Zai_Ju:0 "Wu Wang Zai Ju"
 FNG_Wu_Wang_Zai_Ju_desc:0 "The ancient Chinese idiom 'Forget not what happened in Ju' alludes to the desperate defence of Ju, the state of Qi's final city, which lead it to reconquer all of its lost territory. Manchuria shall be our Ju, from which we will reconquer all of China!"
-FNG_Jehol-Chahar_Border_Exercises:0 "Jehol Chahar-Border Exercises"
-FNG_Jehol-Chahar_Border_Exercises_desc:0 "Border exercises not only reinforce discipline and training, but also serve to give our troops an intimate knowledge of the land they may soon fight in. As a result, if we are pushed onto the defensive, they can more effectively execute tactics, and call in fire support with extreme precision."
+FNG_Jehol_Border_Exercises:0 "Jehol Border Exercises"
+FNG_Jehol_Border_Exercises_desc:0 "Border exercises not only reinforce discipline and training, but also serve to give our troops an intimate knowledge of the land they may soon fight in. As a result, if we are pushed onto the defensive, they can more effectively execute tactics, and call in fire support with extreme precision, as they know the lay of the land."
 FNG_The_Doihara_Arrangement:0 "The Doihara Arrangement"
 FNG_The_Doihara_Arrangement_desc:0 "A Japanese colonel by the name of Doihara has come to us proposing the smuggling of opium as a means of spreading corruption in the Qing Empire, and weakening its soldiers' will to fight. Jehol and Kirin already host poppy farms, but if discovered this strategy could invite serious criticism."
 FNG_Golden_Dragon_Cigarettes:0 "Golden Dragon Cigarettes"
