Skeleton for PLC Focus Tree.

--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -4,6 +4,126 @@
 AUS_sold_GAL:0 "We sold Galicia"
 PLC_buy_GAL:0 "We bought Galicia"
 
+### Foci ###
+PLC_poland_first:0 "Warsaw as the Capital"
+PLC_striking_the_balance:0 "A New Capital"
+PLC_lithuania_first:0 "Vilnius as the Capital"
+PLC_the_new_bureaucracy:0 "The Bureaucracy First"
+PLC_solve_racial_tensions:0 "Solve Racial Tensions"
+PLC_a_unifying_faith:0 "A Unifying Faith"
+PLC_a_new_capital:0 "Improving the Capital"
+PLC_expand_vilnius:0 "Expand Vilnius"
+PLC_build_warsaw_palace:0 "The Palace at Warsaw"
+PLC_sejm_dominance:0 "Sejm Dominance"
+PLC_mendog_iii:0 "Mendog III"
+PLC_lithuanian_lead:0 "Lithuanian Leadership"
+PLC_polish_language:0 "The Polish Language"
+PLC_minority_rights:0 "Minority Guarantees"
+PLC_decentralization:0 "Decentralization"
+PLC_centralizing_power:0 "Centralizing Power"
+PLC_building_the_capital:0 "Building the New Capital"
+PLC_vilnius_warsaw_railway:0 "The Vilnius-Warsaw Railway"
+PLC_an_absolute_monarch:0 "The Absolute Monarch"
+PLC_a_smaller_circle:0 "A Smaller Circle"
+PLC_local_representatives:0 "Local Representatives"
+PLC_complete_suffrage:0 "Universal Suffrage"
+PLC_redefining_territories:0 "Redefining Territories"
+PLC_a_common_currency:0 "A Common Currency"
+PLC_a_combined_constitution:0 "A Combined Constitution"
+PLC_mitteleuropa_question:0 "The Mitteleuropa Question"
+PLC_the_revolution:0 "Fires of the Revolution"
+PLC_new_secret_police:0 "The Secret Police"
+PLC_fourth_international:0 "The Fourth International"
+PLC_join_with_france:0 "The Internationale"
+PLC_mobilize_the_people:0 "Mobilize the People"
+PLC_diplomatic_offices:0 "Diplomatic Offices"
+PLC_the_monarch:0 "The Commonwealth Alone"
+PLC_stick_with_germany:0 "Stick with Germany"
+PLC_german_tech_sharing:0 "The Kaiser Wilhelm Society"
+PLC_economic_treaties:0 "Economic Co-operation"
+PLC_german_advisors:0 "German Advisors"
+PLC_our_natural_borders:0 "Our Natural Borders"
+PLC_the_greater_commonwealth:0 "The Greater Commonwealth"
+PLC_ruthenian_invitation:0 "Ruthenian Invitation"
+PLC_galician_referendum:0 "Galician Referendum"
+PLC_german_territories:0 "Our German Territories"
+PLC_strike_east:0 "Strike East"
+PLC_strike_south:0 "Strike South"
+PLC_strike_north:0 "Strike North"
+PLC_mobile_army:0 "A Mobile Army"
+PLC_impenetrable_defense:0 "An Impenetrable Defense"
+PLC_integrating_two_armies:0 "Integrating Two Armies"
+PLC_polish_leadership:0 "Polish Leadership"
+PLC_lithuanian_tactics:0 "Lithuanian Tactics"
+PLC_special_forces:0 "Strike Teams"
+PLC_mobile_infantry:0 "Mobile Infantry"
+PLC_supply_chains:0 "Extended Supply Chains"
+PLC_armored_spearhead:0 "Armored Spearhead"
+PLC_tank_innovations:0 "Commonwealth Designs"
+PLC_killing_blow:0 "A Killing Blow"
+PLC_never_surrender:0 "Never Surrender"
+PLC_trench_warfare:0 "Revisiting Trench Warfare"
+PLC_artillery_focus:0 "Bombardment Focus"
+PLC_moving_fortresses:0 "Mobile Fortresses"
+PLC_russian_forts:0 "Russian Border Forts"
+PLC_holding_our_gains:0 "Holding Our Gains"
+PLC_mobilization:0 "Mobilization"
+PLC_wartime_rations:0 "Economic Rationing"
+PLC_new_tactics:0 "New Army Tactics"
+PLC_army_drills:0 "Army Drills"
+PLC_reforming_high_command:0 "Reforming the High Command"
+PLC_army_designs:0 "New Army Designs"
+PLC_polish_structure:0 "Polish Infrastructure"
+PLC_lithuanian_structure:0 "Lithuanian Infrastructure"
+PLC_polish_monopolies:0 "Polish Corporate Monopolies"
+PLC_polish_farms:0 "Modernise Polish Farming"
+PLC_steel_factories:0 "Steel Factories"
+PLC_tungsten_mining:0 "Tungsten Mining"
+PLC_urban_districts:0 "New Urban Districts"
+PLC_lithuanian_corporations:0 "Lithuanian Corporations"
+PLC_reform_economy:0 "Emergency Economic Reforms"
+PLC_recover_black_monday:0 "Black Monday Recovery"
+PLC_railways:0 "International Railways"
+PLC_more_railways:0 "Conforming Rail Gauges"
+PLC_military_factories:0 "Military Buildup"
+PLC_combined_infrastructure:0 "Combined Infrastructure"
+PLC_new_economy:0 "A New Civilian Economy"
+PLC_more_military_factories:0 "Wartime Factories"
+PLC_industrial_innovations:0 "Industrial Innovations"
+PLC_poles_in_the_navy:0 "Poles in the Navy"
+PLC_polish_officers:0 "Polish Enthusiasm"
+PLC_lithuanian_experience:0 "Lithuanian Experience"
+PLC_lithuanian_ships:0 "The Lithuanian Fleet"
+PLC_baltic_protection:0 "Protecting the Baltic"
+PLC_atlantic_fleet:0 "An Atlantic Fleet"
+PLC_versatile_fleet:0 "Fleet Versatility"
+PLC_anti_submarines:0 "Anti-Submarine Warfare"
+PLC_naval_bombers:0 "Coastal Bomber Patrols"
+PLC_coastal_forts:0 "Portside Fortifications"
+PLC_garrison_training:0 "Local Garrisons"
+PLC_new_dockyards:0 "New Dockyards"
+PLC_naval_infrastructure:0 "Naval Buildup"
+PLC_naval_academy:0 "A Common Naval Academy"
+PLC_experimental_designs:0 "Experimental Naval Designs"
+PLC_battleships:0 "Battleship Designs"
+PLC_carrier_experiments:0 "Carrier Experiments"
+PLC_marines:0 "Commonwealth Marines"
+PLC_submarine_tactics:0 "Unrestricted Submarine Warfare"
+PLC_trade_interdiction:0 "Atlantic Trade Interdiction"
+PLC_royal_air_force:0 "The Polish Royal Air Force"
+PLC_lithuanian_air_force:0 "The Lithuanian Air Force"
+PLC_tactical_bombers:0 "Tactical Bomber Support"
+PLC_cas:0 "CAS Tactics"
+PLC_radar:0 "New RADAR Stations"
+PLC_paratroopers:0 "The Commonwealth Airborne"
+PLC_fighters:0 "New Fighter Designs"
+PLC_better_fighters:0 "The Modern Fighter"
+PLC_rocket_experiments:0 "Jet Experimentations"
+PLC_air_tactics:0 "Air Tactics"
+PLC_more_air_tactics:0 "Combined Air Tactics"
+PLC_heavy_fighters:0 "Heavy fighter Designs"
+PLC_strategic_bombers:0 "Death From Above"
+
 ### Opinion Modifiers ###
 PLC_JOIN_MITT_GER:0 "The Polish-Lithuanians want to join Mitteleuropa"
 PLC_JOIN_MITT:0 "The Poland-Lithuania join Mitteleuropa"
