--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -282,9 +282,9 @@ ARG_national_populist_DEF:0 "La Plata"
 ARM_totalist:0 "Socialist Republic of Armenia"
 ARM_totalist_ADJ:0 "Armenian"
 ARM_totalist_DEF:0 "The Socialist Republic of Armenia"
-ARM_syndicalist:0 "syndicalist Republic of Armenia"
+ARM_syndicalist:0 "Syndicalist Republic of Armenia"
 ARM_syndicalist_ADJ:0 "Armenian"
-ARM_syndicalist_DEF:0 "The syndicalist Republic of Armenia"
+ARM_syndicalist_DEF:0 "The Syndicalist Republic of Armenia"
 ARM_radical_socialist:0 "Socialist Republic of Armenia"
 ARM_radical_socialist_ADJ:0 "Armenian"
 ARM_radical_socialist_DEF:0 "The Socialist Republic of Armenia"
@@ -499,9 +499,9 @@ BAV_national_populist_DEF:0 "Bavaria"
 BEL_totalist:0 "Belgium"
 BEL_totalist_ADJ:0 "Belgian"
 BEL_totalist_DEF:0 "Belgium"
-BEL_syndicalist:0 "syndicalist Republic of Belgium"
+BEL_syndicalist:0 "Syndicalist Republic of Belgium"
 BEL_syndicalist_ADJ:0 "Belgian"
-BEL_syndicalist_DEF:0 "The syndicalist Republic of Belgium"
+BEL_syndicalist_DEF:0 "The Syndicalist Republic of Belgium"
 BEL_radical_socialist:0 "Belgium"
 BEL_radical_socialist_ADJ:0 "Belgian"
 BEL_radical_socialist_DEF:0 "Belgium"
@@ -1212,9 +1212,9 @@ CHI_national_populist_DEF:0 "The Republic of China"
 CHL_totalist:0 "Chilean Socialist Republic"
 CHL_totalist_ADJ:0 "Chilean"
 CHL_totalist_DEF:0 "Chilean Socialist Republic"
-CHL_syndicalist:0 "syndicalist Republic of Chile"
+CHL_syndicalist:0 "Syndicalist Republic of Chile"
 CHL_syndicalist_ADJ:0 "Chilean"
-CHL_syndicalist_DEF:0 "syndicalist Republic of Chile"
+CHL_syndicalist_DEF:0 "Syndicalist Republic of Chile"
 CHL_radical_socialist:0 "Chile"
 CHL_radical_socialist_ADJ:0 "Chilean"
 CHL_radical_socialist_DEF:0 "Chile"
@@ -1336,9 +1336,9 @@ CNT_national_populist_DEF:0 "The Anarcho-Spanish Empire"
 COL_totalist:0 "Revolutionary Colombia"
 COL_totalist_ADJ:0 "Colombian"
 COL_totalist_DEF:0 "Revolutionary Colombia"
-COL_syndicalist:0 "syndicalist Colombia"
+COL_syndicalist:0 "Syndicalist Colombia"
 COL_syndicalist_ADJ:0 "Colombian"
-COL_syndicalist_DEF:0 "syndicalist Colombia"
+COL_syndicalist_DEF:0 "Syndicalist Colombia"
 COL_radical_socialist:0 "Colombia"
 COL_radical_socialist_ADJ:0 "Colombian"
 COL_radical_socialist_DEF:0 "Colombia"
@@ -1460,9 +1460,9 @@ CSA_national_populist_DEF:0 "American Union State"
 CUB_totalist:0 "Revolutionary Cuba"
 CUB_totalist_ADJ:0 "Cuban"
 CUB_totalist_DEF:0 "Revolutionary Cuba"
-CUB_syndicalist:0 "syndicalist Cuba"
+CUB_syndicalist:0 "Syndicalist Cuba"
 CUB_syndicalist_ADJ:0 "Cuban"
-CUB_syndicalist_DEF:0 "syndicalist Cuba"
+CUB_syndicalist_DEF:0 "Syndicalist Cuba"
 CUB_radical_socialist:0 "Republic of Cuba"
 CUB_radical_socialist_ADJ:0 "Cuban"
 CUB_radical_socialist_DEF:0 "The Republic of Cuba"
@@ -1770,9 +1770,9 @@ DOM_national_populist_DEF:0 "Santo Domingo"
 ECU_totalist:0 "People's Republic of Ecuador"
 ECU_totalist_ADJ:0 "Equadorian"
 ECU_totalist_DEF:0 "The People's Republic of Ecuador"
-ECU_syndicalist:0 "syndicalist Republic of Ecuador"
+ECU_syndicalist:0 "Syndicalist Republic of Ecuador"
 ECU_syndicalist_ADJ:0 "Equadorian"
-ECU_syndicalist_DEF:0 "The syndicalist Republic of Ecuador"
+ECU_syndicalist_DEF:0 "The Syndicalist Republic of Ecuador"
 ECU_radical_socialist:0 "Socialist Republic of Ecuador"
 ECU_radical_socialist_ADJ:0 "Equadorian"
 ECU_radical_socialist_DEF:0 "The Socialist Republic of Ecuador"
@@ -1984,24 +1984,24 @@ ETH_national_populist:0 "Abyssinia"
 ETH_national_populist_ADJ:0 "Abyssinian"
 ETH_national_populist_DEF:0 "Abyssinia"
 
-FIN_totalist:0 "syndicalist Finland"
+FIN_totalist:0 "Syndicalist Finland"
 FIN_totalist_ADJ:0 "Finnish"
-FIN_totalist_DEF:0 "syndicalist Finland"
-FIN_syndicalist:0 "syndicalist Finland"
+FIN_totalist_DEF:0 "Syndicalist Finland"
+FIN_syndicalist:0 "Syndicalist Finland"
 FIN_syndicalist_ADJ:0 "Finnish"
-FIN_syndicalist_DEF:0 "syndicalist Finland"
-FIN_radical_socialist:0 "syndicalist Finland"
+FIN_syndicalist_DEF:0 "Syndicalist Finland"
+FIN_radical_socialist:0 "Syndicalist Finland"
 FIN_radical_socialist_ADJ:0 "Finnish"
-FIN_radical_socialist_DEF:0 "syndicalist Finland"
+FIN_radical_socialist_DEF:0 "Syndicalist Finland"
 FIN_social_democrat:0 "Finland"
 FIN_social_democrat_ADJ:0 "Finnish"
 FIN_social_democrat_DEF:0 "Finland"
-FIN_social_liberal:0 "Nationalist Finland"
+FIN_social_liberal:0 "Finland"
 FIN_social_liberal_ADJ:0 "Finnish"
 FIN_social_liberal_DEF:0 "Nationalist Finland"
-FIN_market_liberal:0 "Nationalist Finland"
+FIN_market_liberal:0 "Finland"
 FIN_market_liberal_ADJ:0 "Finnish"
-FIN_market_liberal_DEF:0 "Nationalist Finland"
+FIN_market_liberal_DEF:0 "inland"
 FIN_social_conservative:0 "Finland"
 FIN_social_conservative_ADJ:0 "Finnish"
 FIN_social_conservative_DEF:0 "Finland"
@@ -4932,9 +4932,9 @@ PRI_national_populist_DEF:0 "Puerto Rico"
 PRU_totalist:0 "Peruvian Free State"
 PRU_totalist_ADJ:0 "Peruvian"
 PRU_totalist_DEF:0 "The Peruvian Free State"
-PRU_syndicalist:0 "syndicalist Peru"
+PRU_syndicalist:0 "Syndicalist Peru"
 PRU_syndicalist_ADJ:0 "Peruvian"
-PRU_syndicalist_DEF:0 "syndicalist Peru"
+PRU_syndicalist_DEF:0 "Syndicalist Peru"
 PRU_radical_socialist:0 "Peruvian Popular Republic"
 PRU_radical_socialist_ADJ:0 "Peruvian"
 PRU_radical_socialist_DEF:0 "The Peruvian Popular Republic"
@@ -5335,9 +5335,9 @@ SAR_social_conservatist_DEF:0 "Sarawak"
 SAU_totalist:0 "Arabian Socialist Republic"
 SAU_totalist_ADJ:0 "Arabian"
 SAU_totalist_DEF:0 "The Arabian Socialist Republic"
-SAU_syndicalist:0 "Arabian syndicalist Republic"
+SAU_syndicalist:0 "Arabian Syndicalist Republic"
 SAU_syndicalist_ADJ:0 "Arabian"
-SAU_syndicalist_DEF:0 "The Arabian syndicalist Republic"
+SAU_syndicalist_DEF:0 "The Arabian Syndicalist Republic"
 SAU_radical_socialist:0 "Arabian Socialist Republic"
 SAU_radical_socialist_ADJ:0 "Arabian"
 SAU_radical_socialist_DEF:0 "The Arabian Socialist Republic"
@@ -5738,9 +5738,9 @@ SLO_national_populist_DEF:0 "The Kingdom of Slovenia"
 SOM_totalist:0 "Somali Revolutionary People's Federation"
 SOM_totalist_ADJ:0 "Somali"
 SOM_totalist_DEF:0 "Somali Revolutionary People's Federation"
-SOM_syndicalist:0 "Somali syndicalist Congress"
+SOM_syndicalist:0 "Somali Syndicalist Congress"
 SOM_syndicalist_ADJ:0 "Somali"
-SOM_syndicalist_DEF:0 "Somali syndicalist Congress"
+SOM_syndicalist_DEF:0 "Somali Syndicalist Congress"
 SOM_radical_socialist:0 "Somali Federation"
 SOM_radical_socialist_ADJ:0 "Somali"
 SOM_radical_socialist_DEF:0 "Somali Federation"
@@ -6234,9 +6234,9 @@ TIE_national_populist_DEF:0 "The Tian Empire"
 TNZ_totalist:0 "Tanzania"
 TNZ_totalist_ADJ:0 "Tanzanian"
 TNZ_totalist_DEF:0 "Tanzania"
-TNZ_syndicalist:0 "United Swahili syndicalist Alliance"
+TNZ_syndicalist:0 "United Swahili Syndicalist Alliance"
 TNZ_syndicalist_ADJ:0 "Tanzanian"
-TNZ_syndicalist_DEF:0 "United Swahili syndicalist Alliance"
+TNZ_syndicalist_DEF:0 "United Swahili Syndicalist Alliance"
 TNZ_radical_socialist:0 "Tanzania"
 TNZ_radical_socialist_ADJ:0 "Tanzanian"
 TNZ_radical_socialist_DEF:0 "Tanzania"
@@ -6451,9 +6451,9 @@ TUA_national_populist_DEF:0 "The Tuareg Confederation"
 TUN_totalist:0 "Tunis Commune"
 TUN_totalist_ADJ:0 "Tunisian"
 TUN_totalist_DEF:0 "Tunis Commune"
-TUN_syndicalist:0 "Tunisian syndicalist Government"
+TUN_syndicalist:0 "Tunisian Syndicalist Government"
 TUN_syndicalist_ADJ:0 "Tunisian"
-TUN_syndicalist_DEF:0 "Tunisian syndicalist Government"
+TUN_syndicalist_DEF:0 "Tunisian Syndicalist Government"
 TUN_radical_socialist:0 "Tunisia"
 TUN_radical_socialist_ADJ:0 "Tunisian"
 TUN_radical_socialist_DEF:0 "Tunisia"
@@ -6606,9 +6606,9 @@ ULS_national_populist_DEF:0 "Free Ulster"
 URG_totalist:0 "Revolutionary Uruguay"
 URG_totalist_ADJ:0 "Uruguayan"
 URG_totalist_DEF:0 "Revolutionary Uruguay"
-URG_syndicalist:0 "syndicalist Uruguay"
+URG_syndicalist:0 "Syndicalist Uruguay"
 URG_syndicalist_ADJ:0 "Uruguayan"
-URG_syndicalist_DEF:0 "syndicalist Uruguay"
+URG_syndicalist_DEF:0 "Syndicalist Uruguay"
 URG_radical_socialist:0 "Uruguayan Social Republic"
 URG_radical_socialist_ADJ:0 "Uruguayan"
 URG_radical_socialist_DEF:0 "The Uruguayan Social Republic"
@@ -6699,9 +6699,9 @@ UZB_national_populist_DEF:0 "Uzbekistan"
 VEN_totalist:0 "Venezuelan Social Republic"
 VEN_totalist_ADJ:0 "Venezuelan"
 VEN_totalist_DEF:0 "The Venezuelan Social Republic"
-VEN_syndicalist:0 "syndicalist Venezuela"
+VEN_syndicalist:0 "Syndicalist Venezuela"
 VEN_syndicalist_ADJ:0 "Venezuelan"
-VEN_syndicalist_DEF:0 "syndicalist Venezuela"
+VEN_syndicalist_DEF:0 "Syndicalist Venezuela"
 VEN_radical_socialist:0 "Socialist Venezuela"
 VEN_radical_socialist_ADJ:0 "Venezuelan"
 VEN_radical_socialist_DEF:0 "The Socialist Venezuela"
