No more inland Finns. Also fixes some country colours (on the wishes of Yuri)

--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -2001,7 +2001,7 @@ FIN_social_liberal_ADJ:0 "Finnish"
 FIN_social_liberal_DEF:0 "Nationalist Finland"
 FIN_market_liberal:0 "Finland"
 FIN_market_liberal_ADJ:0 "Finnish"
-FIN_market_liberal_DEF:0 "inland"
+FIN_market_liberal_DEF:0 "Finland"
 FIN_social_conservative:0 "Finland"
 FIN_social_conservative_ADJ:0 "Finnish"
 FIN_social_conservative_DEF:0 "Finland"
