More structural work on PLC.

--- a/localisation/KR_Companies_l_english.yml
+++ b/localisation/KR_Companies_l_english.yml
@@ -497,6 +497,7 @@ plc_vilniaus_universitetas:0 "Vilniaus universitetas"
 plc_sanitas:0 "Sanitas"
 plc_polsko_niemiecka_kompania_transportowa:0 "Polsko Niemiecka Kompania Transportowa"
 plc_fb_radom:0 "FB Radom"
+plc_perkun:0 "Perkun"
 plc_zaklady_przemyslowe:0 "Zakłady Przemysłowe 1-go Maja"
 plc_cws:0 "CWS"
 plc_lietuvos_arsenalas:0 "Lietuvos arsenalas"
