--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -1,8 +1,12 @@
 ﻿l_english:
 
 ### Ideas ###
-AUS_sold_GAL:0 "We sold Galicia"
-PLC_buy_GAL:0 "We bought Galicia"
+AUS_sold_GAL:0 "Sold Galicia"
+PLC_buy_GAL:0 "Bought Galicia"
+PLC_black_monday:0 "Effects of Black Monday"
+PLC_black_monday_desc:0 "Germany's Black Monday has also affected our country. We have to act."
+PLC_black_monday1:0 "Effects of Black Monday"
+PLC_black_monday1_desc:0 "Germany's Black Monday has also affected our country. We have to act."
 
 ### Foci ###
 PLC_poland_first:0 "Warsaw as the Capital"
@@ -44,8 +48,8 @@ PLC_economic_treaties:0 "Economic Co-operation"
 PLC_german_advisors:0 "German Advisors"
 PLC_our_natural_borders:0 "Our Natural Borders"
 PLC_the_greater_commonwealth:0 "The Greater Commonwealth"
-PLC_ruthenian_invitation:0 "Ruthenian Invitation"
-PLC_galician_referendum:0 "Galician Referendum"
+PLC_ruthenian_invitation:0 "Ruthenian Referendum"
+PLC_galician_referendum:0 "The Galician Purchase"
 PLC_german_territories:0 "Our German Territories"
 PLC_strike_east:0 "Strike East"
 PLC_strike_south:0 "Strike South"
