- updated some DEH events
- added Afghan victory event for war with DEH
- added Nepalese Atrocity event chain
- added Sikkim and Muzzafarpur states so BHC can take part in the Nepalese chain

--- a/localisation/KR_State_Names_l_english.yml
+++ b/localisation/KR_State_Names_l_english.yml
@@ -886,3 +886,5 @@ STATE_883:0 "Heilongjiang"
 STATE_884:0 "Xing'an"
 STATE_885:0 "Songjiang"
 STATE_886:0 "Jilin"
+STATE_887:0 "Muzaffarpur"
+STATE_888:0 "Sikkim"
