--- a/localisation/KR_Victory_Points_l_english.yml
+++ b/localisation/KR_Victory_Points_l_english.yml
@@ -236,6 +236,7 @@ VICTORY_POINTS_4405:0 "Nha Trang"
 VICTORY_POINTS_4424:0 "Johor Bahru"
 VICTORY_POINTS_4425:0 "Myitkyina"
 VICTORY_POINTS_4433:0 "Sattahip" # Chonburi
+VICTORY_POINTS_4459:0 "Gorakhpur"
 VICTORY_POINTS_4464:0 "Biloxi"
 VICTORY_POINTS_4504:0 "Guiyang"
 VICTORY_POINTS_4512:0 "Diyarbakır"
@@ -282,6 +283,7 @@ VICTORY_POINTS_5107:0 "Fortaleza"
 VICTORY_POINTS_5117:0 "Friedrichsburg"
 VICTORY_POINTS_5128:0 "Antananarivo"
 VICTORY_POINTS_5139:0 "Tirpitzburg"
+VICTORY_POINTS_5157:0 "Dehradun"
 VICTORY_POINTS_5168:0 "Récife"
 VICTORY_POINTS_5199:0 "Lusaka"
 VICTORY_POINTS_5210:0 "Mombasa"
@@ -650,6 +652,7 @@ VICTORY_POINTS_12295:0 "Kolhapur"
 VICTORY_POINTS_12299:0 "Singapur" #Singapore
 VICTORY_POINTS_12320:0 "Yerevan"
 VICTORY_POINTS_12335:0 "Monywa"
+VICTORY_POINTS_12338:0 "Darjeeling"
 VICTORY_POINTS_12357:0 "Milwaukee"
 VICTORY_POINTS_12360:0 "Khon Kaen"
 VICTORY_POINTS_12364:0 "Buenos Aires"
