--- a/localisation/KR_Afghanistan_l_english.yml
+++ b/localisation/KR_Afghanistan_l_english.yml
@@ -1,1 +1,29 @@
 ﻿l_english:
+
+### Events ###
+afg.0.t:0 "The 5th Anglo-Afghan War?"
+afg.0.d:0 "In the remnants of the Raj to our south, dissent has sprung up like wildflowers in the wake of Edward VIII's succession. In Kabul, we have our own troubles keeping the latent discontent of reform down. A repeat of the victorious Fourth Anglo-Afghan War might cement our own position whilst winning new lands and subjects for the crown!"
+afg.0.a:0 "The time is ripe! Let us repeat our victories!"
+afg.0.b:0 "What does India have but cows?"
+
+afg.1.t:0 "The Third Treaty of Rawalpindi"
+afg.1.d:0 "Catastrophe! Our campaign against the Delhi Government has been crowned with spectacular failure and our armies forced through the Pass of Khyber, fleeing in panick. The vice-roy, Ganga Singh, has offered peace - demanding a restoration of the pre-1926 borders. Unfortunately we are unable to decline, lest our very nation be destroyed..."
+afg.1.d.puppet:0 "Catastrophe! Our campaign against the Delhi Government has been crowned with spectacular failure and our armies forced through the Pass of Khyber, fleeing in panick. The vice-roy, Ganga Singh, has offered peace - demanding a restoration of the pre-1926 borders and the permanent submission of our government to theirs. Unfortunately we are unable to decline, lest our very nation be destroyed..."
+afg.1.a:0 "We yield because we have no other choice..."
+
+afg.2.t:0 "The Third Treaty of Rawalpindi"
+afg.2.d:0 "Victory is ours! The decadent British lapdogs in Delhi have been utterly routed and our forces are entrenched in the smouldering remains of their capital. Now might be the best time to demand concessions, whilst we still carry the lead."
+afg.2.a:0 "Let us claim Kashmir and carve a path to the Mouth of the Indus!"
+afg.2.b:0 "I shall be the emancipator and liberator of all Mohammedans in the Indus Valley!"
+afg.2.c:0 "No peace with idol-worshippers, let us complete our conquest!"
+
+afg.3.t:0 "Demands of the Emir"
+afg.3.d:0 "Curses! The Afghan dogs have completely overpowered us and have reduced our proud nation to humiliation. Now the Afghan Emir demands our surrender of the princely state of Kashmir and access to the Mouth of the Indus. Although these are harsh terms, it might be wise to comply - lest our rivals on the continent act on our exposed situation."
+afg.3.a:0 "We yield because we have no other choice..."
+afg.3.b:0 "They must be joking, Hindustan Zindabad!"
+
+afg.4.t:0 "The Delhi Government Refuses!"
+afg.4.d:0 "Foolishly, the British lapdogs have refused our rightful claims."
+afg.4.a:0 "The war continues!"
+
+
